<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_default"
    android:orientation="vertical"
    tools:context=".presenter.auth.recover.CheckEmailFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/txt_verify_your_mail"
        android:textColor="@color/text_color_default"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="180dp"
        android:contentDescription="@string/txt_description_image_check_mail"
        android:src="@drawable/check_email_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/txt_message_information_check_mail"
        android:textSize="16sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check_email"
        style="@style/ButtonStyleSignIn"
        android:layout_gravity="center"
        android:text="@string/txt_button_check_mail" />


    <ProgressBar
        android:id="@+id/progress_circular"
        style="@style/ProgressCircularStyle"
        tools:visibility="visible"

         />

</LinearLayout>